<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.abhis.inventoryapp.EditorActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/editor"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <LinearLayout style="@style/ActivityEditorLinearLayoutsection1">

        <TextView
            style="@style/AddTextStyle"
            android:text="@string/medicine_name" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/medicine_name_edit_text"
                style="@style/AddFormStyle"
                android:hint="@string/medicine_name"
                android:inputType="textCapWords" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout style="@style/ActivityEditorLinearLayoutsection1">


        <TextView
            style="@style/AddTextStyle"
            android:text="@string/medicine_price" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/medicine_price_edit_text"
                style="@style/AddFormStyle"
                android:hint="Enter price per item in rupees"
                android:inputType="number" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout style="@style/ActivityEditorLinearLayoutsection1">


        <TextView
            style="@style/AddTextStyle"
            android:text="@string/medicine_quantity" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/medicine_quantity_edit_text"
                style="@style/AddFormStyle"
                android:hint="@string/medicine_quantity"
                android:inputType="number" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout style="@style/ActivityEditorLinearLayoutsection1">


        <TextView
            style="@style/AddTextStyle"
            android:text="@string/medicine_supplier_name" />

        <Spinner
            android:id="@+id/medicine_supplier_name_spinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingRight="16dp"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout style="@style/ActivityEditorLinearLayoutsection1">

        <TextView
            style="@style/AddTextStyle"
            android:text="@string/medicine_supplier_phone_number" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/medicine_supplier_phone_number_edit_text"
                style="@style/AddFormStyle"
                android:hint="@string/medicine_supplier_phone_number"
                android:inputType="number" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>