<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.abhis.inventoryapp.ViewActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/medicine_view"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <LinearLayout style="@style/ActivityViewLinearLayoutsection1">

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                style="@style/ViewTitleTextStyle"
                android:text="@string/medicine_name" />
        </LinearLayout>

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                android:id="@+id/medicine_name_view_text"
                style="@style/ViewdetailStyle" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/ListItemLinearLayoutsection1">

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                style="@style/ViewTitleTextStyle"
                android:text="@string/medicine_price" />
        </LinearLayout>

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                android:id="@+id/medicine_price_view_text"
                style="@style/ViewdetailStyle" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/ActivityViewLinearLayoutsection1">

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                style="@style/ViewTitleTextStyle"
                android:text="@string/medicine_quantity" />
        </LinearLayout>

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                android:id="@+id/medicine_quantity_view_text"
                style="@style/ViewdetailStyle" />

            <LinearLayout
                style="@style/ListItemLinearLayoutsection2"
                android:paddingLeft="16dp">

                <LinearLayout style="@style/ListItemLinearLayoutsection2">

                    <Button
                        android:id="@+id/increase_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@color/colorAccent"
                        android:text="+"
                        android:textColor="#fff" />
                </LinearLayout>

                <LinearLayout style="@style/ListItemLinearLayoutsection2">

                    <Button
                        android:id="@+id/decrease_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@color/colorAccent"
                        android:text="-"
                        android:textColor="#fff" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/ActivityViewLinearLayoutsection1">

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                style="@style/ViewTitleTextStyle"
                android:text="@string/medicine_supplier_name" />
        </LinearLayout>

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                android:id="@+id/medicine_supplier_name_view_text"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/ActivityViewLinearLayoutsection1">

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                style="@style/ViewTitleTextStyle"
                android:text="@string/medicine_supplier_phone_number" />
        </LinearLayout>

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <LinearLayout style="@style/ActivityViewLinearLayoutsection1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/medicine_supplier_phone_number_view_text"
                        style="@style/ViewdetailStyle" />
                </LinearLayout>

                <LinearLayout style="@style/ListItemLinearLayoutsection2">

                    <Button
                        android:id="@+id/phone_button"
                        android:layout_width="45dp"
                        android:layout_height="40dp"
                        android:background="@color/colorAccent"
                        android:focusable="false"
                        android:text="Call"
                        android:textColor="#fff" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/ActivityViewLinearLayoutsection1"
        android:gravity="center">

        <Button
            android:id="@+id/delete_button"
            style="@style/ActivityViewButtonStyle"
            android:text="Delete" />
    </LinearLayout>
</LinearLayout>